# shuffled

./: Cargo.toml  LICENSE.md  README.md  example.conf
scripts/: shufflectl
src/: config.rs  main.rs  server.rs  utils.rs  watchdog.rs  weather.rs
