[package]
name = "shuffled"
version = "0.1.0"
authors = ["adamnew123456 <adamnew123456@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
json = "0.12.4"
url = "2.1.1"
reqwest = { version = "0.10.8", features = ["blocking"] }
chrono = "0.4"
random = "0.12.2"